# BytesProtectorAV

./: BytesProtector.py  BytesProtector.spec  CMakeLists.txt  README.md  badurls.db  blockpage.html  build.py  heur_engine.py  heuristics.json
